all protocols ready

--- a/viridian/algae/typhoon/port.ipynb
+++ b/viridian/algae/typhoon/port.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the following cell to configure TYPHOON hyperparameters with environmental variables.\n",
+    "Use the following cell to configure PORT hyperparameters with environmental variables.\n",
     "\n",
-    "> NB! It should be run *prior* to all the other cells, since hyperparameters are being resolved only once upon `TyphoonCore` class import."
+    "> NB! It should be run *prior* to all the other cells, since hyperparameters are being resolved only once upon `PortCore` class import."
    ]
   },
   {
@@ -29,12 +29,13 @@
     "from os import environ\n",
     "\n",
     "environ[\"PROTOCOL_NAME\"] = \"port\"\n",
-    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"PORT_MIN_TIMEOUT\"] = str(1)\n",
-    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"PORT_MAX_TIMEOUT\"] = str(4)\n",
-    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"PORT_DEFAULT_TIMEOUT\"] = str(3)\n",
+    "environ[\"SEASIDE_LOG_LEVEL\"] = \"DEBUG\"\n",
+    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"PORT_MIN_TIMEOUT\"] = str(16)\n",
+    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"PORT_MAX_TIMEOUT\"] = str(32)\n",
+    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"PORT_DEFAULT_TIMEOUT\"] = str(24)\n",
     "environ[\"PROTOCOL_MIN_NEXT_IN\"] = environ[\"PORT_MIN_NEXT_IN\"] = str(8.0)\n",
     "environ[\"PROTOCOL_MAX_NEXT_IN\"] = environ[\"PORT_MAX_NEXT_IN\"] = str(32.0)\n",
-    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"PORT_MAX_RETRIES\"] = str(3)"
+    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"PORT_MAX_RETRIES\"] = str(5)"
    ]
   },
   {
