--- a/viridian/algae/typhoon/typhoon.ipynb
+++ b/viridian/algae/typhoon/typhoon.ipynb
@@ -29,12 +29,13 @@
     "from os import environ\n",
     "\n",
     "environ[\"PROTOCOL_NAME\"] = \"typhoon\"\n",
-    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"TYPHOON_MIN_TIMEOUT\"] = str(1)\n",
-    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"TYPHOON_MAX_TIMEOUT\"] = str(4)\n",
-    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"TYPHOON_DEFAULT_TIMEOUT\"] = str(3)\n",
+    "environ[\"SEASIDE_LOG_LEVEL\"] = \"DEBUG\"\n",
+    "environ[\"PROTOCOL_MIN_TIMEOUT\"] = environ[\"TYPHOON_MIN_TIMEOUT\"] = str(16)\n",
+    "environ[\"PROTOCOL_MAX_TIMEOUT\"] = environ[\"TYPHOON_MAX_TIMEOUT\"] = str(32)\n",
+    "environ[\"PROTOCOL_DEFAULT_TIMEOUT\"] = environ[\"TYPHOON_DEFAULT_TIMEOUT\"] = str(24)\n",
     "environ[\"PROTOCOL_MIN_NEXT_IN\"] = environ[\"TYPHOON_MIN_NEXT_IN\"] = str(8.0)\n",
     "environ[\"PROTOCOL_MAX_NEXT_IN\"] = environ[\"TYPHOON_MAX_NEXT_IN\"] = str(32.0)\n",
-    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"TYPHOON_MAX_RETRIES\"] = str(3)"
+    "environ[\"PROTOCOL_MAX_RETRIES\"] = environ[\"TYPHOON_MAX_RETRIES\"] = str(5)"
    ]
   },
   {
@@ -166,7 +167,7 @@
     "Simple sanity check here.\n",
     "Client connects to echo server, sends it a small package, receives response, checks it's the same and exits.\n",
     "\n",
-    "First two packets should be initialization packets, then we expect to observe a shadowride request packet (data + handshake) and a data response packet.\n",
+    "First two packets should be initialization packets, then we expect to observe two data request and response packets.\n",
     "Last two packets should be termination packets.\n",
     "\n",
     "As a result, a small sequence diagram is produced, showing packet exchange, their direction, size and timestamp."
@@ -212,7 +213,7 @@
     "Server tries to restore connection, but fails and closes it after some time.\n",
     "\n",
     "First two packets should be initialization packets, then several successful handshakes should happen.\n",
-    "Finally, some unsuccessful handshake attempts by server should be present - and finally a termination packet.\n",
+    "Finally, some unsuccessful handshake attempts by server should be present - and finally a termination packet (from server).\n",
     "\n",
     "As a result, a small packet plot is produced, showing packet exchange, their type, size and timestamp.\n",
     "\n",
@@ -232,8 +233,9 @@
     "\n",
     "from typhoon.utils import PlotConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
     "\n",
-    "SLEEP_DELAY = (float(environ[\"TYPHOON_MAX_NEXT_IN\"]) + float(environ[\"TYPHOON_MAX_TIMEOUT\"])) * 5\n",
-    "TIMEOUT_DELAY = float(environ[\"TYPHOON_MAX_NEXT_IN\"]) * (float(environ[\"TYPHOON_MAX_RETRIES\"]) + 1)\n",
+    "next_time = float(environ[\"TYPHOON_MAX_NEXT_IN\"]) + float(environ[\"PROTOCOL_MAX_TIMEOUT\"])\n",
+    "SLEEP_DELAY = next_time * 5\n",
+    "TIMEOUT_DELAY = next_time * float(environ[\"TYPHOON_MAX_RETRIES\"])\n",
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
@@ -348,9 +350,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, 30% of packets will be dropped.\n",
+    "Here, 20% of packets will be dropped.\n",
     "\n",
-    "> WARNING! The following cell might fail in approximately 3% of the runs!"
+    "> WARNING! The following cell might fail in approximately 8% of the runs!"
    ]
   },
   {
@@ -366,7 +368,7 @@
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
-    "async with sniff(PlotConf(), r\"loss 30%\") as s:\n",
+    "async with sniff(PlotConf(), r\"loss 20%\") as s:\n",
     "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
     "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
@@ -376,7 +378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, 30% of packets will be duplicated."
+    "Here, 20% of packets will be duplicated.\n",
+    "\n",
+    "> WARNING! The following cell might fail in approximately 8% of the runs!"
    ]
   },
   {
@@ -392,7 +396,7 @@
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
-    "async with sniff(PlotConf(), r\"duplicate 30%\") as s:\n",
+    "async with sniff(PlotConf(), r\"duplicate 20%\") as s:\n",
     "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
     "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
@@ -431,7 +435,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, 30% of packets will be corrupted."
+    "Here, 20% of packets will be corrupted.\n",
+    "\n",
+    "> WARNING! The following cell might fail in approximately 8% of the runs!"
    ]
   },
   {
@@ -447,7 +453,7 @@
     "CONFIG = SequenceConfig(quiet=True)\n",
     "\n",
     "\n",
-    "async with sniff(PlotConf(), r\"corrupt 30%\") as s:\n",
+    "async with sniff(PlotConf(), r\"corrupt 20%\") as s:\n",
     "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
     "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
