--- a/viridian/algae/typhoon/port.ipynb
+++ b/viridian/algae/typhoon/port.ipynb
@@ -174,7 +174,7 @@
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "from sources.protocol.utils import ProtocolReturnCode\n",
     "\n",
-    "from typhoon.utils import GraphConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import GraphConf, sniff, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "\n",
     "async def echo_server_callback(user_id: int, data: bytes) -> bytes:\n",
@@ -188,8 +188,8 @@
     "\n",
     "\n",
     "async with sniff(GraphConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(success_listener_callback, echo_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx() as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(success_listener_callback, echo_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx() as c:\n",
     "            request = b\"Hi server!\"\n",
     "            await c.write(request)\n",
     "            response = await c.read()\n",
@@ -221,15 +221,15 @@
     "\n",
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "SLEEP_DELAY = (float(environ[\"PORT_MAX_NEXT_IN\"]) + float(environ[\"PORT_MAX_TIMEOUT\"])) * 5\n",
     "TIMEOUT_DELAY = float(environ[\"PORT_MAX_NEXT_IN\"]) * (float(environ[\"PORT_MAX_RETRIES\"]) + 1)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
     "            print(f\"Connection established! Sleeping for {SLEEP_DELAY}...\")\n",
     "            await sleep(SLEEP_DELAY)\n",
     "        print(f\"Connection interrupted! Waiting for {TIMEOUT_DELAY}...\")\n",
@@ -259,14 +259,14 @@
    "source": [
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC.private_key, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig(messages=96, quiet=True, client_sequence=lambda _: 1, server_sequence=lambda _: 0)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(expand_time=False)) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -294,14 +294,14 @@
    "source": [
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC.private_key, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -322,14 +322,14 @@
     "\n",
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 100ms 75ms\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 4)"
    ]
@@ -349,14 +349,14 @@
    "source": [
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"loss 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -375,14 +375,14 @@
    "source": [
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"duplicate 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -403,14 +403,14 @@
     "\n",
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 125ms reorder 30% 50%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 2.5)"
    ]
@@ -430,14 +430,14 @@
    "source": [
     "from sources.protocol.port_socket import PortListener, PortClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig(quiet=True)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"corrupt 30%\") as s:\n",
-    "    async with PortListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with PortClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with PortListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with PortClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   }
