--- a/viridian/algae/typhoon/typhoon.ipynb
+++ b/viridian/algae/typhoon/typhoon.ipynb
@@ -182,7 +182,7 @@
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "from sources.protocol.utils import ProtocolReturnCode\n",
     "\n",
-    "from typhoon.utils import GraphConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import GraphConf, sniff, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "\n",
     "async def echo_server_callback(user_id: int, data: bytes) -> bytes:\n",
@@ -196,8 +196,8 @@
     "\n",
     "\n",
     "async with sniff(GraphConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(success_listener_callback, echo_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx() as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(success_listener_callback, echo_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx() as c:\n",
     "            request = b\"Hi server!\"\n",
     "            await c.write(request)\n",
     "            response = await c.read()\n",
@@ -231,7 +231,7 @@
     "\n",
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "next_time = float(environ[\"TYPHOON_MAX_NEXT_IN\"]) + float(environ[\"PROTOCOL_MAX_TIMEOUT\"])\n",
     "SLEEP_DELAY = next_time * 5\n",
@@ -239,8 +239,8 @@
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=lambda _: None) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(lambda _: None, False) as c:\n",
     "            print(f\"Connection established! Sleeping for {SLEEP_DELAY}...\")\n",
     "            await sleep(SLEEP_DELAY)\n",
     "        print(f\"Connection interrupted! Waiting for {TIMEOUT_DELAY}...\")\n",
@@ -271,14 +271,14 @@
    "source": [
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig(messages=96, quiet=True, client_sequence=lambda _: 1, server_sequence=lambda _: 0)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(expand_time=False)) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -306,14 +306,14 @@
    "source": [
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf()) as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -334,14 +334,14 @@
     "\n",
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 100ms 75ms\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 4)"
    ]
@@ -363,14 +363,14 @@
    "source": [
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"loss 20%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -391,14 +391,14 @@
    "source": [
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"duplicate 20%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   },
@@ -419,14 +419,14 @@
     "\n",
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig()\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"delay 125ms reorder 30% 50%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)\n",
     "            await sleep(CONFIG.base_delay() * 2.5)"
    ]
@@ -448,14 +448,14 @@
    "source": [
     "from sources.protocol.typhoon_socket import TyphoonListener, TyphoonClient\n",
     "\n",
-    "from typhoon.utils import PlotConf, sniff, SequenceConfig, LISTENER_KEY, CLIENT_KEY, USER_TOKEN\n",
+    "from typhoon.utils import PlotConf, sniff, SequenceConfig, ASYMMETRIC, USER_TOKEN\n",
     "\n",
     "CONFIG = SequenceConfig(quiet=True)\n",
     "\n",
     "\n",
     "async with sniff(PlotConf(), r\"corrupt 20%\") as s:\n",
-    "    async with TyphoonListener(LISTENER_KEY, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
-    "        async with TyphoonClient(CLIENT_KEY, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
+    "    async with TyphoonListener(ASYMMETRIC.private_key, s.server_address).ctx(data_callback=CONFIG.seq_server_callback) as l:\n",
+    "        async with TyphoonClient(ASYMMETRIC.public_key, USER_TOKEN, s.server_address, l.port, s.client_address).ctx(CONFIG.seq_client_callback) as c:\n",
     "            await CONFIG.process(c)"
    ]
   }
