--- a/viridian/algae/typhoon/port.ipynb
+++ b/viridian/algae/typhoon/port.ipynb
@@ -204,8 +204,8 @@
     "Client is connected to server, waits for some time and disappears.\n",
     "Server tries to restore connection, but fails and closes it after some time.\n",
     "\n",
-    "Client and server exchange initialization packets, then several successful `TCP` keepalive `ACK`s are being sent (small invalid packets, below 100 bytes in size).\n",
-    "Finally, some unsuccessful `ACK`s attempts by server should be present before the connection termination.\n",
+    "Client and server exchange initialization packets, then several successful `TCP` keepalive `ACK` are being sent (small invalid packets, below 100 bytes in size).\n",
+    "Finally, some unsuccessful `ACK` attempts by server should be present before the connection termination.\n",
     "\n",
     "As a result, a small packet plot is produced, showing packet exchange, their type, size and timestamp."
    ]
